<resources>

    <string name="app_name">Real Estate Manager</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="your_lunch">Your Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share Data</string>
    <string name="logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="send">Upload</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="surface">Surface</string>
    <string name="numberOfRooms">Number of rooms</string>

    <string name="title_permission">Cette application a besoin de permission pour fonctionner</string>
    <string name="real_estate_info_share">Partager votre immobilier sur</string>
    <!-- Share preferences -->

    <string name="typePref">RealEstateType</string>
    <string name="pricePref">RealEstatePrice</string>
    <string name="addressPref">RealEstateAddress</string>
    <string name="surfacePref">RealEstateSurface</string>
    <string name="numbeOfRoomsPref">RealEstateNumOfRooms</string>
    <string name="descriptionPref">RealEstateTypeDescription</string>
    <string name="location">Location</string>

    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="search">SEARCH</string>
    <string name="enable_notifications_once_per_day">Enable notifications (once per day)</string>
    <string name="enable_search_by_date">Filter by date</string>
    <string name="search_menu">Search</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string-array name="topicArray">

        <item> @string/arts</item>
        <item> @string/business</item>
        <item> @string/entrepreneurs</item>
        <item> @string/politics</item>
        <item> @string/sports</item>
        <item> @string/travel</item>

    </string-array>
    <string name="title_activity_base_seach_notif">BaseSeachNotifActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="show_on_map">Show on map</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="locations">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Chennai</item>
    </string-array>
    <string-array name="places">
        <item>Apartment</item>
        <item>Loft</item>
        <item>Manoir</item>
        <item>Villa</item>
        <item>Penthouse</item>
        <item>Duplex</item>
        <item>House</item>
        <item>Flat</item>

    </string-array>


    <string name="save_lat__key">pref_key_lat</string>
    <string name="save_Long__key">pref_key_lng</string>
    <string name="save_vicinity_key">pref_key_vicinity</string>
    <string name="save_restaurantName_key">pref_key_restaurantName</string>
    <string name="realEstateAgentProfile">pref_key_realEstateAgentProfile</string>
    <string name="realEstateModel">pref_key_realEstateModel</string>
    <string name="save_photoHeight_key">pref_key_photoHeight</string>
    <string name="save_photoWidth_key">pref_key_photoWidth</string>
    <string name="save_photoRef_key">pref_key_photoRef</string>
    <string name="save_number_of_stars_key">pref_key_number_of_stars</string>
    <string name="save_uid_key">pref_key_uid</string>
    <string name="save_list_restaurantSelected_key">save_list_restaurantSelected_key</string>
    <string name="save_restaurantSelected_key">pref_restaurantSelected_uid</string>
    <string name="image_upload_unsuccessful">upload was not successful</string>


</resources>
