<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollFeed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusableInTouchMode="true">

    <ImageButton
            android:id="@+id/closeFormEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_close_black_24dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/modifiedEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorAccent"
                android:text=" Real Estate Data"
                android:textSize="14sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstateTypeEdit"
                    style="@style/modifiedEditText"
                    android:hint="@string/type"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstateAddressEdit"
                    style="@style/modifiedEditText"
                    android:hint="@string/address"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/realEstatePriceEdit"
                    style="@style/modifiedEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstateSurfaceEdit"
                    style="@style/modifiedEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/surface"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstateNumOfRoomsEdit"
                    style="@style/modifiedEditText"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/numberOfRooms"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstateDescriptionEdit"
                    style="@style/modifiedEditText"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFeedback1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/realEstate_dateEntranceEdit"
                    style="@style/modifiedEditText"
                    android:hint="Date of entrance" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFeedback2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/statusEdit"
                    style="@style/modifiedEditText"
                    android:hint="Status" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputFeedback3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dateOfSaleEdit"
                    style="@style/modifiedEditText"
                    android:hint="Date of sale" />

            </com.google.android.material.textfield.TextInputLayout>



            <ImageButton

                android:id="@+id/uploadPhotosEdit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:background="@drawable/uploadphoto" />

            <TextView
                style="@style/modifiedEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" Tap on icon to upload photo"
                android:textSize="12sp" />


            <Button
                android:id="@+id/btnSendEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@drawable/centre_button"
                android:text="Modify"
                android:textColor="@color/whiteTextColor" />


        </LinearLayout>


</RelativeLayout>